--- a/css/main.css
+++ b/css/main.css
@@ -59,33 +59,21 @@ body {
 	position: relative;
 }
 
-.logo-wrapper {
-	margin: 0;
-	padding: 0;
-
-	font-size: 1em;
-}
-
-.pop {
-	margin: 0;
-    padding: 0;
-    text-align: center;
-}
-
 .logo {
 	float: left;
-	height: 70px;
-	margin: 0 10px 0;
-	padding: 0;
-	width: 80px;
+	margin: 1em 30px;
+    padding: 0;
+	width: 120px;
+    height: 50px;
+    position: block;
 
-	background: transparent url("../images/redbox-holder-2.png") no-repeat left top;
+	/*background: transparent url("../images/webit-logo.svg") no-repeat left top;
 	background-size: 80px auto;
 
 	font-size: 1.5em;
 	line-height: 1.3;
 	text-indent: 100%;
-	white-space: nowrap;
+	white-space: nowrap;*/
 }
 
 .nav-btn,
@@ -177,6 +165,10 @@ button:hover {
     color: #fff;
 }
 
+.greendrops {
+    max-width: 100%;
+    display: block;
+}
 
 
 
