--- a/css/grid.css
+++ b/css/grid.css
@@ -55,6 +55,117 @@
   position: relative;
 }
 
+.unit-xs-hidden {
+  display: none;
+  visibility: hidden;
+}
+
+.unit-xs-centered {
+  margin: 0 auto;
+}
+
+.unit-xs-1, .xs-1 {
+  display: block;
+  visibility: visible;
+  width: 100%;
+}
+
+.unit-offset-xs-0 {
+  margin-left: 0;
+}
+
+.unit-push-xs-0,
+.unit-pull-xs-0 {
+  left: 0;
+}
+
+.unit-xs-1-2, .xs-1-2 {
+  width: 50.0000%;
+}
+
+.unit-offset-xs-1-2 {
+  margin-left: 50.0000%;
+}
+
+.unit-push-xs-1-2 {
+  left: 50.0000%;
+}
+
+.unit-pull-xs-1-2 {
+  left: -50.0000%;
+}
+
+.unit-xs-1-3, .xs-1-3 {
+  width: 33.3333%;
+}
+
+.unit-offset-xs-1-3 {
+  margin-left: 33.3333%;
+}
+
+.unit-push-xs-1-3 {
+  left: 33.3333%;
+}
+
+.unit-pull-xs-1-3 {
+  left: -33.3333%;
+}
+
+.unit-xs-2-3, .xs-2-3 {
+  width: 66.6667%;
+}
+
+.unit-offset-xs-2-3 {
+  margin-left: 66.6667%;
+}
+
+.unit-push-xs-2-3 {
+  left: 66.6667%;
+}
+
+.unit-pull-xs-2-3 {
+  left: -66.6667%;
+}
+
+.unit-xs-1-4, .xs-1-4 {
+  width: 25.0000%;
+}
+
+.unit-offset-xs-1-4 {
+  margin-left: 25.0000%;
+}
+
+.unit-push-xs-1-4 {
+  left: 25.0000%;
+}
+
+.unit-pull-xs-1-4 {
+  left: -25.0000%;
+}
+
+.unit-xs-3-4, .xs-3-4 {
+  width: 75.0000%;
+}
+
+.unit-offset-xs-3-4 {
+  margin-left: 75.0000%;
+}
+
+.unit-push-xs-3-4 {
+  left: 75.0000%;
+}
+
+.unit-pull-xs-3-4 {
+  left: -75.0000%;
+}
+
+.unit-xs-1-2,.xs-1-2,.unit-xs-1-3,.xs-1-3,.unit-xs-2-3,.xs-2-3,.unit-xs-1-4,.xs-1-4,.unit-xs-3-4,.xs-3-4 {
+  display: inline-block;
+  visibility: visible;
+}
+
+@media only screen and (min-width: 25em) {
+
 .unit-s-hidden {
   display: none;
   visibility: hidden;
@@ -64,7 +175,7 @@
   margin: 0 auto;
 }
 
-.unit-s-1 {
+.unit-s-1, .s-1 {
   display: block;
   visibility: visible;
   width: 100%;
@@ -79,7 +190,7 @@
   left: 0;
 }
 
-.unit-s-1-2 {
+.unit-s-1-2, .s-1-2 {
   width: 50.0000%;
 }
 
@@ -95,7 +206,7 @@
   left: -50.0000%;
 }
 
-.unit-s-1-3 {
+.unit-s-1-3, .s-1-3 {
   width: 33.3333%;
 }
 
@@ -111,7 +222,7 @@
   left: -33.3333%;
 }
 
-.unit-s-2-3 {
+.unit-s-2-3, .s-2-3 {
   width: 66.6667%;
 }
 
@@ -127,12 +238,46 @@
   left: -66.6667%;
 }
 
-.unit-s-1-2,.unit-s-1-3,.unit-s-2-3 {
+.unit-s-1-4, .s-1-4 {
+  width: 25.0000%;
+}
+
+.unit-offset-s-1-4 {
+  margin-left: 25.0000%;
+}
+
+.unit-push-s-1-4 {
+  left: 25.0000%;
+}
+
+.unit-pull-s-1-4 {
+  left: -25.0000%;
+}
+
+.unit-s-3-4, .s-3-4 {
+  width: 75.0000%;
+}
+
+.unit-offset-s-3-4 {
+  margin-left: 75.0000%;
+}
+
+.unit-push-s-3-4 {
+  left: 75.0000%;
+}
+
+.unit-pull-s-3-4 {
+  left: -75.0000%;
+}
+
+.unit-s-1-2,.s-1-2,.unit-s-1-3,.s-1-3,.unit-s-2-3,.s-2-3,.unit-s-1-4,.s-1-4,.unit-s-3-4,.s-3-4 {
   display: inline-block;
   visibility: visible;
 }
 
-@media only screen and (min-width: 25em) {
+}
+
+@media only screen and (min-width: 38em) {
 
 .unit-m-hidden {
   display: none;
@@ -143,7 +288,7 @@
   margin: 0 auto;
 }
 
-.unit-m-1 {
+.unit-m-1, .m-1 {
   display: block;
   visibility: visible;
   width: 100%;
@@ -158,7 +303,7 @@
   left: 0;
 }
 
-.unit-m-1-2 {
+.unit-m-1-2, .m-1-2 {
   width: 50.0000%;
 }
 
@@ -174,7 +319,7 @@
   left: -50.0000%;
 }
 
-.unit-m-1-3 {
+.unit-m-1-3, .m-1-3 {
   width: 33.3333%;
 }
 
@@ -190,7 +335,7 @@
   left: -33.3333%;
 }
 
-.unit-m-2-3 {
+.unit-m-2-3, .m-2-3 {
   width: 66.6667%;
 }
 
@@ -206,14 +351,46 @@
   left: -66.6667%;
 }
 
-.unit-m-1-2,.unit-m-1-3,.unit-m-2-3 {
+.unit-m-1-4, .m-1-4 {
+  width: 25.0000%;
+}
+
+.unit-offset-m-1-4 {
+  margin-left: 25.0000%;
+}
+
+.unit-push-m-1-4 {
+  left: 25.0000%;
+}
+
+.unit-pull-m-1-4 {
+  left: -25.0000%;
+}
+
+.unit-m-3-4, .m-3-4 {
+  width: 75.0000%;
+}
+
+.unit-offset-m-3-4 {
+  margin-left: 75.0000%;
+}
+
+.unit-push-m-3-4 {
+  left: 75.0000%;
+}
+
+.unit-pull-m-3-4 {
+  left: -75.0000%;
+}
+
+.unit-m-1-2,.m-1-2,.unit-m-1-3,.m-1-3,.unit-m-2-3,.m-2-3,.unit-m-1-4,.m-1-4,.unit-m-3-4,.m-3-4 {
   display: inline-block;
   visibility: visible;
 }
 
 }
 
-@media only screen and (min-width: 38em) {
+@media only screen and (min-width: 60em) {
 
 .unit-l-hidden {
   display: none;
@@ -224,7 +401,7 @@
   margin: 0 auto;
 }
 
-.unit-l-1 {
+.unit-l-1, .l-1 {
   display: block;
   visibility: visible;
   width: 100%;
@@ -239,7 +416,7 @@
   left: 0;
 }
 
-.unit-l-1-2 {
+.unit-l-1-2, .l-1-2 {
   width: 50.0000%;
 }
 
@@ -255,7 +432,7 @@
   left: -50.0000%;
 }
 
-.unit-l-1-3 {
+.unit-l-1-3, .l-1-3 {
   width: 33.3333%;
 }
 
@@ -271,7 +448,7 @@
   left: -33.3333%;
 }
 
-.unit-l-2-3 {
+.unit-l-2-3, .l-2-3 {
   width: 66.6667%;
 }
 
@@ -287,9 +464,68 @@
   left: -66.6667%;
 }
 
-.unit-l-1-2,.unit-l-1-3,.unit-l-2-3 {
+.unit-l-1-4, .l-1-4 {
+  width: 25.0000%;
+}
+
+.unit-offset-l-1-4 {
+  margin-left: 25.0000%;
+}
+
+.unit-push-l-1-4 {
+  left: 25.0000%;
+}
+
+.unit-pull-l-1-4 {
+  left: -25.0000%;
+}
+
+.unit-l-3-4, .l-3-4 {
+  width: 75.0000%;
+}
+
+.unit-offset-l-3-4 {
+  margin-left: 75.0000%;
+}
+
+.unit-push-l-3-4 {
+  left: 75.0000%;
+}
+
+.unit-pull-l-3-4 {
+  left: -75.0000%;
+}
+
+.unit-l-1-2,.l-1-2,.unit-l-1-3,.l-1-3,.unit-l-2-3,.l-2-3,.unit-l-1-4,.l-1-4,.unit-l-3-4,.l-3-4 {
   display: inline-block;
   visibility: visible;
 }
 
+}
+
+.unit-content-distribute {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.content-fill {
+  -ms-flex-grow: 2;
+  -webkit-flex-grow: 2;
+  flex-grow: 2;
+}
+
+.content-shrink {
+  -ms-align-self: center;
+  -webkit-align-self: center;
+  align-self: center;
 }
