--- a/css/main.css
+++ b/css/main.css
@@ -104,22 +104,30 @@ body {
 
 .nav {
 	background-color: #000;
+    display: block;
 }
 
 .nav > ul {
 	margin: 0;
 	padding: 0.8em 0;
-
+    display: inline-block;
 	list-style-type: none;
-	font-size: 1.25em;
+	font-size: 1em;
+}
+
+.nav > ul li {
+	margin: 0;
+	padding: 0.8em 0;
+    display: inline-block;
+	list-style-type: none;
+	font-size: 1em;
 }
 
 .nav a,
 .nav a:link,
 .nav a:visited {
-	display: block;
+	display: inline-block;
 	padding: 0.5em 10px;
-
 	color: #e2e2e2;
 	text-decoration: none;
 }
@@ -128,26 +136,11 @@ body {
 .nav a:focus,
 .nav a:active {
 	background-color: #222;
-
 	color: #fff;
 }
 
 .nav-bottom {
 	margin-top: 1.5em;
-}
-
-.nav-top {
-	max-height: 0;
-	overflow: hidden;
-
-	-moz-transition: all 250ms linear;
-	-o-transition: all 250ms linear;
-	-webkit-transition: all 250ms linear;
-	transition: all 250ms linear;
-}
-
-.nav-top[data-state="expanded"] {
-	max-height: 14em;
 }
 
 button {
@@ -169,6 +162,31 @@ button:hover {
     max-width: 100%;
     display: block;
 }
+
+.box1 {
+    background-color: yellow;
+}
+
+.box2 {
+    background-color: green;
+}
+
+.box3 {
+    background-color: blue;
+}
+
+.box4 {
+    background-color: red;
+}
+
+
+
+
+
+
+
+
+
 
 
 
