--- a/css/main.css
+++ b/css/main.css
@@ -192,6 +192,16 @@ button:hover {
     width: 80%;
 }
 
+.headers3 {
+    text-align: center;
+}
+
+.feature {
+    text-align: center;
+}
+
+.quote {
+
 @media only screen and (min-width:60em) {
  
     .getstarted {
@@ -200,9 +210,8 @@ button:hover {
     
 }
 
-.headers {
-    text-align: center;
-}
+
+    
     
 
 
