--- a/css/main.css
+++ b/css/main.css
@@ -228,8 +228,10 @@ blockquote:after {
     background-color: grey;
 }
 
-.quotename {
-    margin: 0 auto;
+blockquote span {
+    font-size: 100%;
+    margin-left: 10px;
+    font-weight: 500;
 }
 
 @media only screen and (min-width:60em) {
