--- a/css/main.css
+++ b/css/main.css
@@ -66,40 +66,6 @@ body {
 	width: 120px;
     height: 50px;
     position: block;
-
-	/*background: transparent url("../images/webit-logo.svg") no-repeat left top;
-	background-size: 80px auto;
-
-	font-size: 1.5em;
-	line-height: 1.3;
-	text-indent: 100%;
-	white-space: nowrap;*/
-}
-
-.nav-btn,
-.nav-btn:link,
-.nav-btn:visited {
-	bottom: 0;
-	height: 40px;
-	overflow: hidden;
-	position: absolute;
-	right: 10px;
-	width: 46px;
-
-	background: transparent url("../images/toggle-nav.svg") no-repeat 0 0;
-
-	text-indent: 100%;
-	white-space: nowrap;
-}
-
-.nav-btn:hover,
-.nav-btn:focus,
-.nav-btn:active {
-	background-color: blue;
-}
-
-.nav-btn[data-state="active"] {
-	background-color: #000;
 }
 
 .nav {
@@ -232,6 +198,30 @@ blockquote span {
     font-size: 100%;
     margin-left: 10px;
     font-weight: 500;
+}
+
+.getstarted a {
+    display: block;
+    text-align: center;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    background-color: #000;
+    padding: 1em;
+    text-decoration: none;
+    width: 10em;
+    height: 4em;
+    font-weight: 200;
+    border-color: white;
+    margin: 0 auto;
+    border: 1px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #33cc33;
+}
+
+.copyright {
+    color: #fff;
 }
 
 @media only screen and (min-width:60em) {
