--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ body {
 
 .nav > ul {
 	margin: 0;
-	padding: 0.8em 0.8em;
+	padding: 0.8em 0;
     display: inline-block;
 	list-style-type: none;
 	font-size: 1em;
