--- a/css/main.css
+++ b/css/main.css
@@ -243,6 +243,17 @@ a:focus {
 
 .copyright {
     color: #fff;
+    width: 8em;
+}
+
+.toplink {
+    margin: 0;
+    padding: 0.2em 0.5em;
+    text-decoration: none;
+    color: #fff;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #33cc33;
 }
 
 @media only screen and (min-width:60em) {
