--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,7 @@ body {
     position: absolute;
     left: 50%;
     top: 50%;
+    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     color: #fff;
     width: 80%;
