--- a/css/main.css
+++ b/css/main.css
@@ -144,19 +144,17 @@ body {
 }
  
 blockquote {
-    display: inline;
     font-weight: bold;
     display: block;
     font-size: 20px;
-    width: 350px;
     text-align: center;
     margin: 0 auto;
 }
 
 blockquote:before, blockquote:after {
 color: #33cc33;
-font-size: 400%;
-width: 50px;
+font-size: 100%;
+width: 50%;
 }
 
 blockquote:before {
@@ -172,11 +170,11 @@ blockquote:after {
     background-color: grey;
 }
 
-blockquote span {
+/*blockquote span {
     font-size: 100%;
     margin-left: 10px;
     font-weight: 500;
-}
+}*/
 
 .getstarted a {
     display: block;
@@ -187,7 +185,7 @@ blockquote span {
     background-color: #000;
     padding: 1em;
     text-decoration: none;
-    width: 10em;
+    width: 8em;
     height: 4em;
     font-weight: 200;
     border-color: white;
