--- a/css/main.css
+++ b/css/main.css
@@ -170,6 +170,30 @@ blockquote:after {
     
 }
 
+.boxlength {
+    width: 100%;
+    height: 3em;
+}
+
+.centreform {
+    text-align: center;
+}
+
+form {
+    max-width: 30em;
+    margin: 0 auto;
+}
+
+button {
+    font-size: 1em;
+    border: none;
+    background-color: #000;
+    font-family: helvetica;
+    color: #fff;
+    border-radius: 5px;
+    padding: 0.5em 0.75em;
+}
+
 .template {
     padding: 0 7%;
 }
