--- a/css/grid.css
+++ b/css/grid.css
@@ -127,39 +127,7 @@
   left: -66.6667%;
 }
 
-.unit-xs-1-4, .xs-1-4 {
-  width: 25.0000%;
-}
-
-.unit-offset-xs-1-4 {
-  margin-left: 25.0000%;
-}
-
-.unit-push-xs-1-4 {
-  left: 25.0000%;
-}
-
-.unit-pull-xs-1-4 {
-  left: -25.0000%;
-}
-
-.unit-xs-3-4, .xs-3-4 {
-  width: 75.0000%;
-}
-
-.unit-offset-xs-3-4 {
-  margin-left: 75.0000%;
-}
-
-.unit-push-xs-3-4 {
-  left: 75.0000%;
-}
-
-.unit-pull-xs-3-4 {
-  left: -75.0000%;
-}
-
-.unit-xs-1-2,.xs-1-2,.unit-xs-1-3,.xs-1-3,.unit-xs-2-3,.xs-2-3,.unit-xs-1-4,.xs-1-4,.unit-xs-3-4,.xs-3-4 {
+.unit-xs-1-2,.xs-1-2,.unit-xs-1-3,.xs-1-3,.unit-xs-2-3,.xs-2-3 {
   display: inline-block;
   visibility: visible;
 }
@@ -238,39 +206,7 @@
   left: -66.6667%;
 }
 
-.unit-s-1-4, .s-1-4 {
-  width: 25.0000%;
-}
-
-.unit-offset-s-1-4 {
-  margin-left: 25.0000%;
-}
-
-.unit-push-s-1-4 {
-  left: 25.0000%;
-}
-
-.unit-pull-s-1-4 {
-  left: -25.0000%;
-}
-
-.unit-s-3-4, .s-3-4 {
-  width: 75.0000%;
-}
-
-.unit-offset-s-3-4 {
-  margin-left: 75.0000%;
-}
-
-.unit-push-s-3-4 {
-  left: 75.0000%;
-}
-
-.unit-pull-s-3-4 {
-  left: -75.0000%;
-}
-
-.unit-s-1-2,.s-1-2,.unit-s-1-3,.s-1-3,.unit-s-2-3,.s-2-3,.unit-s-1-4,.s-1-4,.unit-s-3-4,.s-3-4 {
+.unit-s-1-2,.s-1-2,.unit-s-1-3,.s-1-3,.unit-s-2-3,.s-2-3 {
   display: inline-block;
   visibility: visible;
 }
