--- a/css/main.css
+++ b/css/main.css
@@ -102,8 +102,14 @@ body {
 	color: #fff;
 }
 
-.template-image {
+.thankyou {
+    text-align: center;
+}
 
+.here {
+    text-align: center;
+    color: #000;
+    font-weight: 600;
 }
 
 .box1 {
@@ -140,6 +146,8 @@ body {
     background-size: 100%;
     background-image: url(../images/billboard-saas-black-mayyybe-cropped.jpg);  
     color: #fff;
+    background-repeat: no-repeat;
+    background-color: #000;
 }
 
 .billboardtext {
@@ -202,6 +210,10 @@ blockquote:after {
     height: 3em;
 }
 
+.boxlength:hover {
+    border-color: #33cc33;
+}
+
 .centreform {
     text-align: center;
 }
@@ -225,11 +237,11 @@ button:hover {
     cursor: pointer;
 }
 
-.signuppage {
+.blackfill {
     background-color: #000;
 }
 
-.signupmain {
+.whitefill {
     background-color: #fff;
 }
 
