--- a/css/main.css
+++ b/css/main.css
@@ -367,12 +367,15 @@ a:focus {
         float: left;  
     }
     
-    .billboard {
-        height: 35rem;
-    }
 }
     
-
+@media only screen and (min-width: 10em) {
+    
+    .billboard {
+        height: 28rem;
+    }
+    
+}
 
 
 
